hphp/hack/test/typecheck/test_array15.php.exp
File "test_array15.php", line 20, characters 26-26:
Encountered unexpected token '&'. (Parsing[1002])
